#198 add support for -XX:+UseShenandoahGC in "non" unified jvm logging format